Removed z-index from navbar to prevent modal window from being obscured.

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,15 +1,6 @@
-
-.navbar {
-/*    !*position: fixed; !* 추가: 고정 위치 설정 *!*!
-    width: 100%; !* 추가: 화면 전체 너비로 설정 *!*/
-    z-index: 2; /* 추가: 에디터보다 위에 나타나도록 설정 */
-/*    top: 0; !* 수정: 브라우저 상단에 고정 *!*/
-}
-
 .topBar {
     height: 100px;
     position: relative;
-    z-index: 2000;
 }
 .logo {
     width: auto;
